--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         }
 
         function sendFeedback() {
-            window.location.href = 'mailto:feedback@example.com?subject=24%20Game%20Feedback';
+            window.location.href = 'https://forms.gle/roZVjPdmbhip8fGm7';
         }
     </script>
 </body>
