--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         }
 
         function sendFeedback() {
-            window.location.href = 'https://forms.gle/roZVjPdmbhip8fGm7';
+            window.location.href = "https://forms.gle/roZVjPdmbhip8fGm7";
         }
     </script>
 </body>
