--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
     <div class="container">
         <h1>24 Game</h1>
         <div id="inputNumbers">
-            <input type="number" id="number1" placeholder="01" min="1" max="13">
-            <input type="number" id="number2" placeholder="02" min="1" max="13">
-            <input type="number" id="number3" placeholder="03" min="1" max="13">
-            <input type="number" id="number4" placeholder="04" min="1" max="13">
+            <input type="number" id="number1" placeholder="01" min="1" >
+            <input type="number" id="number2" placeholder="02" min="1" >
+            <input type="number" id="number3" placeholder="03" min="1" >
+            <input type="number" id="number4" placeholder="04" min="1" >
             <button onclick="initializeGame()">Submit</button>
         </div>
         <div id="numbers" class="hidden"></div>
